Fix static and humanity counter dark mode styling on coterie/vampire sheets

--- a/css/themes/dark-theme.css
+++ b/css/themes/dark-theme.css
@@ -107,10 +107,6 @@
   background-color: #f9f9f9;
 }
 
-.dark-theme .wod5e .resource-counter .resource-counter-step[data-state="-"] {
-  background-color: #790813;
-}
-
 .dark-theme .wod5e select {
   background: #f7f7f7;
 }
@@ -251,6 +247,6 @@
   background-color: #3e3e3e;
 }
 
-.dark-theme .wod5e.vampire-sheet .resource-value .resource-value-step.active, .dark-theme .wod5e .resource-value-static .resource-value-static-step.active {
+.dark-theme .wod5e.vampire-sheet .resource-value .resource-value-step.active, .dark-theme .wod5e .resource-value-static .resource-value-static-step.active, .dark-theme .wod5e .resource-value .resource-value-step.active, .dark-theme .wod5e .resource-counter .resource-counter-step[data-state="-"] {
   background-color: #f30018;
 }
